Update homepage URL in package.json, add custom 404 page, and implement HashRouter in App.js for improved routing

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "David Lopera Londoño - Full Stack Developer Portfolio",
   "author": "David Lopera Londoño",
-  "homepage": "https://davidlopera.github.io",
+  "homepage": "https://dalolito.github.io",
   "dependencies": {
     "@react-pdf/renderer": "^2.2.0",
     "@testing-library/jest-dom": "^5.16.2",
